// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/deviceInterfaces show Shimmer when status is working 1`] = `
<DeviceInterfaces
  history={
    Object {
      "location": Object {
        "pathname": undefined,
        "search": undefined,
      },
    }
  }
  isLoading={true}
  location={
    Object {
      "pathname": undefined,
      "search": undefined,
    }
  }
  match={
    Object {
      "params": Object {},
    }
  }
  modelDefinitionWithSource={
    Object {
      "modelDefinitionSynchronizationStatus": 4,
      "source": undefined,
    }
  }
  refresh={[MockFunction]}
  setInterfaceId={
    [MockFunction] {
      "calls": Array [
        Array [
          null,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  settingsVisibleToggle={[MockFunction]}
>
  <StyledShimmerBase>
    <ShimmerBase
      isDataLoaded={false}
      styles={[Function]}
      theme={
        Object {
          "disableGlobalClassNames": false,
          "effects": Object {
            "elevation16": "0 0 5px 0 rgba(0,0,0,.4)",
            "elevation4": "0 0 5px 0 rgba(0,0,0,.4)",
            "elevation64": "0 0 5px 0 rgba(0,0,0,.4)",
            "elevation8": "0 0 5px 0 rgba(0,0,0,.4)",
            "roundedCorner2": "0px",
          },
          "fonts": Object {
            "large": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "17px",
              "fontWeight": 300,
            },
            "medium": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "14px",
              "fontWeight": 400,
            },
            "mediumPlus": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "15px",
              "fontWeight": 400,
            },
            "mega": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "72px",
              "fontWeight": 100,
            },
            "small": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "12px",
              "fontWeight": 400,
            },
            "smallPlus": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "13px",
              "fontWeight": 400,
            },
            "superLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "42px",
              "fontWeight": 100,
            },
            "tiny": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "10px",
              "fontWeight": 600,
            },
            "xLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "21px",
              "fontWeight": 100,
            },
            "xSmall": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "11px",
              "fontWeight": 400,
            },
            "xxLarge": Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
              "fontSize": "28px",
              "fontWeight": 100,
            },
          },
          "isInverted": false,
          "palette": Object {
            "accent": "#0078d4",
            "black": "#000000",
            "blackTranslucent40": "rgba(0,0,0,.4)",
            "blue": "#0078d4",
            "blueDark": "#002050",
            "blueLight": "#00bcf2",
            "blueMid": "#00188f",
            "green": "#107c10",
            "greenDark": "#004b1c",
            "greenLight": "#bad80a",
            "magenta": "#b4009e",
            "magentaDark": "#5c005c",
            "magentaLight": "#e3008c",
            "neutralDark": "#212121",
            "neutralLight": "#eaeaea",
            "neutralLighter": "#f4f4f4",
            "neutralLighterAlt": "#f8f8f8",
            "neutralPrimary": "#333333",
            "neutralPrimaryAlt": "#3c3c3c",
            "neutralQuaternary": "#d0d0d0",
            "neutralQuaternaryAlt": "#dadada",
            "neutralSecondary": "#666666",
            "neutralSecondaryAlt": "#767676",
            "neutralTertiary": "#a6a6a6",
            "neutralTertiaryAlt": "#c8c8c8",
            "orange": "#d83b01",
            "orangeLight": "#ea4300",
            "orangeLighter": "#ff8c00",
            "purple": "#5c2d91",
            "purpleDark": "#32145a",
            "purpleLight": "#b4a0ff",
            "red": "#e81123",
            "redDark": "#a80000",
            "teal": "#008272",
            "tealDark": "#004b50",
            "tealLight": "#00b294",
            "themeDark": "#005a9e",
            "themeDarkAlt": "#106ebe",
            "themeDarker": "#004578",
            "themeLight": "#c7e0f4",
            "themeLighter": "#deecf9",
            "themeLighterAlt": "#eff6fc",
            "themePrimary": "#0078d4",
            "themeSecondary": "#2b88d8",
            "themeTertiary": "#71afe5",
            "white": "#ffffff",
            "whiteTranslucent40": "rgba(255,255,255,.4)",
            "yellow": "#ffb900",
            "yellowDark": "#d29200",
            "yellowLight": "#fff100",
          },
          "semanticColors": Object {
            "accentButtonBackground": "#0078d4",
            "accentButtonText": "#ffffff",
            "actionLink": "#333333",
            "actionLinkHovered": "#212121",
            "blockingBackground": "rgba(234, 67, 0, .2)",
            "bodyBackground": "#ffffff",
            "bodyDivider": "#eaeaea",
            "bodyFrameBackground": "#ffffff",
            "bodyFrameDivider": "#eaeaea",
            "bodyStandoutBackground": "#f8f8f8",
            "bodySubtext": "#666666",
            "bodyText": "#333333",
            "bodyTextChecked": "#000000",
            "buttonBackground": "#f4f4f4",
            "buttonBackgroundChecked": "#c8c8c8",
            "buttonBackgroundCheckedHovered": "#eaeaea",
            "buttonBackgroundDisabled": "#f4f4f4",
            "buttonBackgroundHovered": "#eaeaea",
            "buttonBackgroundPressed": "#eaeaea",
            "buttonBorder": "transparent",
            "buttonBorderDisabled": "transparent",
            "buttonText": "#333333",
            "buttonTextChecked": "#212121",
            "buttonTextCheckedHovered": "#000000",
            "buttonTextDisabled": "#a6a6a6",
            "buttonTextHovered": "#212121",
            "buttonTextPressed": "#212121",
            "defaultStateBackground": "#f8f8f8",
            "disabledBackground": "#f4f4f4",
            "disabledBodySubtext": "#c8c8c8",
            "disabledBodyText": "#a6a6a6",
            "disabledSubtext": "#d0d0d0",
            "disabledText": "#a6a6a6",
            "errorBackground": "rgba(232, 17, 35, .2)",
            "errorText": "#a80000",
            "focusBorder": "#666666",
            "inputBackground": "#ffffff",
            "inputBackgroundChecked": "#0078d4",
            "inputBackgroundCheckedHovered": "#106ebe",
            "inputBorder": "#a6a6a6",
            "inputBorderHovered": "#333333",
            "inputFocusBorderAlt": "#0078d4",
            "inputForegroundChecked": "#ffffff",
            "inputPlaceholderText": "#666666",
            "inputText": "#333333",
            "inputTextHovered": "#212121",
            "link": "#0078d4",
            "linkHovered": "#004578",
            "listBackground": "#ffffff",
            "listHeaderBackgroundHovered": "#f4f4f4",
            "listHeaderBackgroundPressed": "#eaeaea",
            "listItemBackgroundChecked": "#eaeaea",
            "listItemBackgroundCheckedHovered": "#dadada",
            "listItemBackgroundHovered": "#f4f4f4",
            "listText": "#333333",
            "listTextColor": "#333333",
            "menuBackground": "#ffffff",
            "menuDivider": "#c8c8c8",
            "menuHeader": "#0078d4",
            "menuIcon": "#0078d4",
            "menuItemBackgroundChecked": "#eaeaea",
            "menuItemBackgroundHovered": "#f4f4f4",
            "menuItemBackgroundPressed": "#eaeaea",
            "menuItemText": "#333333",
            "menuItemTextHovered": "#212121",
            "primaryButtonBackground": "#0078d4",
            "primaryButtonBackgroundDisabled": "#f4f4f4",
            "primaryButtonBackgroundHovered": "#106ebe",
            "primaryButtonBackgroundPressed": "#005a9e",
            "primaryButtonBorder": "transparent",
            "primaryButtonText": "#ffffff",
            "primaryButtonTextDisabled": "#d0d0d0",
            "primaryButtonTextHovered": "#ffffff",
            "primaryButtonTextPressed": "#ffffff",
            "smallInputBorder": "#666666",
            "successBackground": "rgba(186, 216, 10, .2)",
            "variantBorder": "#eaeaea",
            "variantBorderHovered": "#a6a6a6",
            "warningBackground": "rgba(255, 185, 0, .2)",
            "warningHighlight": "#ffb900",
            "warningText": "#333333",
          },
          "spacing": Object {
            "l1": "20px",
            "l2": "32px",
            "m": "16px",
            "s1": "8px",
            "s2": "4px",
          },
        }
      }
    >
      <div
        className="ms-Shimmer-container root-47"
      >
        <div
          className="ms-Shimmer-shimmerWrapper shimmerWrapper-48"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <StyledShimmerElementsGroupBase>
            <ShimmerElementsGroupBase
              flexWrap={false}
              styles={[Function]}
              theme={
                Object {
                  "disableGlobalClassNames": false,
                  "effects": Object {
                    "elevation16": "0 0 5px 0 rgba(0,0,0,.4)",
                    "elevation4": "0 0 5px 0 rgba(0,0,0,.4)",
                    "elevation64": "0 0 5px 0 rgba(0,0,0,.4)",
                    "elevation8": "0 0 5px 0 rgba(0,0,0,.4)",
                    "roundedCorner2": "0px",
                  },
                  "fonts": Object {
                    "large": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "17px",
                      "fontWeight": 300,
                    },
                    "medium": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "14px",
                      "fontWeight": 400,
                    },
                    "mediumPlus": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "15px",
                      "fontWeight": 400,
                    },
                    "mega": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "72px",
                      "fontWeight": 100,
                    },
                    "small": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "12px",
                      "fontWeight": 400,
                    },
                    "smallPlus": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "13px",
                      "fontWeight": 400,
                    },
                    "superLarge": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "42px",
                      "fontWeight": 100,
                    },
                    "tiny": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "10px",
                      "fontWeight": 600,
                    },
                    "xLarge": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "21px",
                      "fontWeight": 100,
                    },
                    "xSmall": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "11px",
                      "fontWeight": 400,
                    },
                    "xxLarge": Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                      "fontSize": "28px",
                      "fontWeight": 100,
                    },
                  },
                  "isInverted": false,
                  "palette": Object {
                    "accent": "#0078d4",
                    "black": "#000000",
                    "blackTranslucent40": "rgba(0,0,0,.4)",
                    "blue": "#0078d4",
                    "blueDark": "#002050",
                    "blueLight": "#00bcf2",
                    "blueMid": "#00188f",
                    "green": "#107c10",
                    "greenDark": "#004b1c",
                    "greenLight": "#bad80a",
                    "magenta": "#b4009e",
                    "magentaDark": "#5c005c",
                    "magentaLight": "#e3008c",
                    "neutralDark": "#212121",
                    "neutralLight": "#eaeaea",
                    "neutralLighter": "#f4f4f4",
                    "neutralLighterAlt": "#f8f8f8",
                    "neutralPrimary": "#333333",
                    "neutralPrimaryAlt": "#3c3c3c",
                    "neutralQuaternary": "#d0d0d0",
                    "neutralQuaternaryAlt": "#dadada",
                    "neutralSecondary": "#666666",
                    "neutralSecondaryAlt": "#767676",
                    "neutralTertiary": "#a6a6a6",
                    "neutralTertiaryAlt": "#c8c8c8",
                    "orange": "#d83b01",
                    "orangeLight": "#ea4300",
                    "orangeLighter": "#ff8c00",
                    "purple": "#5c2d91",
                    "purpleDark": "#32145a",
                    "purpleLight": "#b4a0ff",
                    "red": "#e81123",
                    "redDark": "#a80000",
                    "teal": "#008272",
                    "tealDark": "#004b50",
                    "tealLight": "#00b294",
                    "themeDark": "#005a9e",
                    "themeDarkAlt": "#106ebe",
                    "themeDarker": "#004578",
                    "themeLight": "#c7e0f4",
                    "themeLighter": "#deecf9",
                    "themeLighterAlt": "#eff6fc",
                    "themePrimary": "#0078d4",
                    "themeSecondary": "#2b88d8",
                    "themeTertiary": "#71afe5",
                    "white": "#ffffff",
                    "whiteTranslucent40": "rgba(255,255,255,.4)",
                    "yellow": "#ffb900",
                    "yellowDark": "#d29200",
                    "yellowLight": "#fff100",
                  },
                  "semanticColors": Object {
                    "accentButtonBackground": "#0078d4",
                    "accentButtonText": "#ffffff",
                    "actionLink": "#333333",
                    "actionLinkHovered": "#212121",
                    "blockingBackground": "rgba(234, 67, 0, .2)",
                    "bodyBackground": "#ffffff",
                    "bodyDivider": "#eaeaea",
                    "bodyFrameBackground": "#ffffff",
                    "bodyFrameDivider": "#eaeaea",
                    "bodyStandoutBackground": "#f8f8f8",
                    "bodySubtext": "#666666",
                    "bodyText": "#333333",
                    "bodyTextChecked": "#000000",
                    "buttonBackground": "#f4f4f4",
                    "buttonBackgroundChecked": "#c8c8c8",
                    "buttonBackgroundCheckedHovered": "#eaeaea",
                    "buttonBackgroundDisabled": "#f4f4f4",
                    "buttonBackgroundHovered": "#eaeaea",
                    "buttonBackgroundPressed": "#eaeaea",
                    "buttonBorder": "transparent",
                    "buttonBorderDisabled": "transparent",
                    "buttonText": "#333333",
                    "buttonTextChecked": "#212121",
                    "buttonTextCheckedHovered": "#000000",
                    "buttonTextDisabled": "#a6a6a6",
                    "buttonTextHovered": "#212121",
                    "buttonTextPressed": "#212121",
                    "defaultStateBackground": "#f8f8f8",
                    "disabledBackground": "#f4f4f4",
                    "disabledBodySubtext": "#c8c8c8",
                    "disabledBodyText": "#a6a6a6",
                    "disabledSubtext": "#d0d0d0",
                    "disabledText": "#a6a6a6",
                    "errorBackground": "rgba(232, 17, 35, .2)",
                    "errorText": "#a80000",
                    "focusBorder": "#666666",
                    "inputBackground": "#ffffff",
                    "inputBackgroundChecked": "#0078d4",
                    "inputBackgroundCheckedHovered": "#106ebe",
                    "inputBorder": "#a6a6a6",
                    "inputBorderHovered": "#333333",
                    "inputFocusBorderAlt": "#0078d4",
                    "inputForegroundChecked": "#ffffff",
                    "inputPlaceholderText": "#666666",
                    "inputText": "#333333",
                    "inputTextHovered": "#212121",
                    "link": "#0078d4",
                    "linkHovered": "#004578",
                    "listBackground": "#ffffff",
                    "listHeaderBackgroundHovered": "#f4f4f4",
                    "listHeaderBackgroundPressed": "#eaeaea",
                    "listItemBackgroundChecked": "#eaeaea",
                    "listItemBackgroundCheckedHovered": "#dadada",
                    "listItemBackgroundHovered": "#f4f4f4",
                    "listText": "#333333",
                    "listTextColor": "#333333",
                    "menuBackground": "#ffffff",
                    "menuDivider": "#c8c8c8",
                    "menuHeader": "#0078d4",
                    "menuIcon": "#0078d4",
                    "menuItemBackgroundChecked": "#eaeaea",
                    "menuItemBackgroundHovered": "#f4f4f4",
                    "menuItemBackgroundPressed": "#eaeaea",
                    "menuItemText": "#333333",
                    "menuItemTextHovered": "#212121",
                    "primaryButtonBackground": "#0078d4",
                    "primaryButtonBackgroundDisabled": "#f4f4f4",
                    "primaryButtonBackgroundHovered": "#106ebe",
                    "primaryButtonBackgroundPressed": "#005a9e",
                    "primaryButtonBorder": "transparent",
                    "primaryButtonText": "#ffffff",
                    "primaryButtonTextDisabled": "#d0d0d0",
                    "primaryButtonTextHovered": "#ffffff",
                    "primaryButtonTextPressed": "#ffffff",
                    "smallInputBorder": "#666666",
                    "successBackground": "rgba(186, 216, 10, .2)",
                    "variantBorder": "#eaeaea",
                    "variantBorderHovered": "#a6a6a6",
                    "warningBackground": "rgba(255, 185, 0, .2)",
                    "warningHighlight": "#ffb900",
                    "warningText": "#333333",
                  },
                  "spacing": Object {
                    "l1": "20px",
                    "l2": "32px",
                    "m": "16px",
                    "s1": "8px",
                    "s2": "4px",
                  },
                }
              }
            >
              <div
                className="ms-ShimmerElementsGroup-root root-51"
                style={
                  Object {
                    "width": "auto",
                  }
                }
              >
                <StyledShimmerLineBase
                  height={16}
                  styles={
                    Object {
                      "root": Array [
                        Object {
                          "borderWidth": "0px",
                        },
                      ],
                    }
                  }
                >
                  <ShimmerLineBase
                    height={16}
                    styles={[Function]}
                    theme={
                      Object {
                        "disableGlobalClassNames": false,
                        "effects": Object {
                          "elevation16": "0 0 5px 0 rgba(0,0,0,.4)",
                          "elevation4": "0 0 5px 0 rgba(0,0,0,.4)",
                          "elevation64": "0 0 5px 0 rgba(0,0,0,.4)",
                          "elevation8": "0 0 5px 0 rgba(0,0,0,.4)",
                          "roundedCorner2": "0px",
                        },
                        "fonts": Object {
                          "large": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "17px",
                            "fontWeight": 300,
                          },
                          "medium": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "14px",
                            "fontWeight": 400,
                          },
                          "mediumPlus": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "15px",
                            "fontWeight": 400,
                          },
                          "mega": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "72px",
                            "fontWeight": 100,
                          },
                          "small": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "12px",
                            "fontWeight": 400,
                          },
                          "smallPlus": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "13px",
                            "fontWeight": 400,
                          },
                          "superLarge": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "42px",
                            "fontWeight": 100,
                          },
                          "tiny": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "10px",
                            "fontWeight": 600,
                          },
                          "xLarge": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "21px",
                            "fontWeight": 100,
                          },
                          "xSmall": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "11px",
                            "fontWeight": 400,
                          },
                          "xxLarge": Object {
                            "MozOsxFontSmoothing": "grayscale",
                            "WebkitFontSmoothing": "antialiased",
                            "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
                            "fontSize": "28px",
                            "fontWeight": 100,
                          },
                        },
                        "isInverted": false,
                        "palette": Object {
                          "accent": "#0078d4",
                          "black": "#000000",
                          "blackTranslucent40": "rgba(0,0,0,.4)",
                          "blue": "#0078d4",
                          "blueDark": "#002050",
                          "blueLight": "#00bcf2",
                          "blueMid": "#00188f",
                          "green": "#107c10",
                          "greenDark": "#004b1c",
                          "greenLight": "#bad80a",
                          "magenta": "#b4009e",
                          "magentaDark": "#5c005c",
                          "magentaLight": "#e3008c",
                          "neutralDark": "#212121",
                          "neutralLight": "#eaeaea",
                          "neutralLighter": "#f4f4f4",
                          "neutralLighterAlt": "#f8f8f8",
                          "neutralPrimary": "#333333",
                          "neutralPrimaryAlt": "#3c3c3c",
                          "neutralQuaternary": "#d0d0d0",
                          "neutralQuaternaryAlt": "#dadada",
                          "neutralSecondary": "#666666",
                          "neutralSecondaryAlt": "#767676",
                          "neutralTertiary": "#a6a6a6",
                          "neutralTertiaryAlt": "#c8c8c8",
                          "orange": "#d83b01",
                          "orangeLight": "#ea4300",
                          "orangeLighter": "#ff8c00",
                          "purple": "#5c2d91",
                          "purpleDark": "#32145a",
                          "purpleLight": "#b4a0ff",
                          "red": "#e81123",
                          "redDark": "#a80000",
                          "teal": "#008272",
                          "tealDark": "#004b50",
                          "tealLight": "#00b294",
                          "themeDark": "#005a9e",
                          "themeDarkAlt": "#106ebe",
                          "themeDarker": "#004578",
                          "themeLight": "#c7e0f4",
                          "themeLighter": "#deecf9",
                          "themeLighterAlt": "#eff6fc",
                          "themePrimary": "#0078d4",
                          "themeSecondary": "#2b88d8",
                          "themeTertiary": "#71afe5",
                          "white": "#ffffff",
                          "whiteTranslucent40": "rgba(255,255,255,.4)",
                          "yellow": "#ffb900",
                          "yellowDark": "#d29200",
                          "yellowLight": "#fff100",
                        },
                        "semanticColors": Object {
                          "accentButtonBackground": "#0078d4",
                          "accentButtonText": "#ffffff",
                          "actionLink": "#333333",
                          "actionLinkHovered": "#212121",
                          "blockingBackground": "rgba(234, 67, 0, .2)",
                          "bodyBackground": "#ffffff",
                          "bodyDivider": "#eaeaea",
                          "bodyFrameBackground": "#ffffff",
                          "bodyFrameDivider": "#eaeaea",
                          "bodyStandoutBackground": "#f8f8f8",
                          "bodySubtext": "#666666",
                          "bodyText": "#333333",
                          "bodyTextChecked": "#000000",
                          "buttonBackground": "#f4f4f4",
                          "buttonBackgroundChecked": "#c8c8c8",
                          "buttonBackgroundCheckedHovered": "#eaeaea",
                          "buttonBackgroundDisabled": "#f4f4f4",
                          "buttonBackgroundHovered": "#eaeaea",
                          "buttonBackgroundPressed": "#eaeaea",
                          "buttonBorder": "transparent",
                          "buttonBorderDisabled": "transparent",
                          "buttonText": "#333333",
                          "buttonTextChecked": "#212121",
                          "buttonTextCheckedHovered": "#000000",
                          "buttonTextDisabled": "#a6a6a6",
                          "buttonTextHovered": "#212121",
                          "buttonTextPressed": "#212121",
                          "defaultStateBackground": "#f8f8f8",
                          "disabledBackground": "#f4f4f4",
                          "disabledBodySubtext": "#c8c8c8",
                          "disabledBodyText": "#a6a6a6",
                          "disabledSubtext": "#d0d0d0",
                          "disabledText": "#a6a6a6",
                          "errorBackground": "rgba(232, 17, 35, .2)",
                          "errorText": "#a80000",
                          "focusBorder": "#666666",
                          "inputBackground": "#ffffff",
                          "inputBackgroundChecked": "#0078d4",
                          "inputBackgroundCheckedHovered": "#106ebe",
                          "inputBorder": "#a6a6a6",
                          "inputBorderHovered": "#333333",
                          "inputFocusBorderAlt": "#0078d4",
                          "inputForegroundChecked": "#ffffff",
                          "inputPlaceholderText": "#666666",
                          "inputText": "#333333",
                          "inputTextHovered": "#212121",
                          "link": "#0078d4",
                          "linkHovered": "#004578",
                          "listBackground": "#ffffff",
                          "listHeaderBackgroundHovered": "#f4f4f4",
                          "listHeaderBackgroundPressed": "#eaeaea",
                          "listItemBackgroundChecked": "#eaeaea",
                          "listItemBackgroundCheckedHovered": "#dadada",
                          "listItemBackgroundHovered": "#f4f4f4",
                          "listText": "#333333",
                          "listTextColor": "#333333",
                          "menuBackground": "#ffffff",
                          "menuDivider": "#c8c8c8",
                          "menuHeader": "#0078d4",
                          "menuIcon": "#0078d4",
                          "menuItemBackgroundChecked": "#eaeaea",
                          "menuItemBackgroundHovered": "#f4f4f4",
                          "menuItemBackgroundPressed": "#eaeaea",
                          "menuItemText": "#333333",
                          "menuItemTextHovered": "#212121",
                          "primaryButtonBackground": "#0078d4",
                          "primaryButtonBackgroundDisabled": "#f4f4f4",
                          "primaryButtonBackgroundHovered": "#106ebe",
                          "primaryButtonBackgroundPressed": "#005a9e",
                          "primaryButtonBorder": "transparent",
                          "primaryButtonText": "#ffffff",
                          "primaryButtonTextDisabled": "#d0d0d0",
                          "primaryButtonTextHovered": "#ffffff",
                          "primaryButtonTextPressed": "#ffffff",
                          "smallInputBorder": "#666666",
                          "successBackground": "rgba(186, 216, 10, .2)",
                          "variantBorder": "#eaeaea",
                          "variantBorderHovered": "#a6a6a6",
                          "warningBackground": "rgba(255, 185, 0, .2)",
                          "warningHighlight": "#ffb900",
                          "warningText": "#333333",
                        },
                        "spacing": Object {
                          "l1": "20px",
                          "l2": "32px",
                          "m": "16px",
                          "s1": "8px",
                          "s2": "4px",
                        },
                      }
                    }
                  >
                    <div
                      className="ms-ShimmerLine-root root-52"
                      style={
                        Object {
                          "minWidth": "auto",
                          "width": "100%",
                        }
                      }
                    >
                      <svg
                        className="ms-ShimmerLine-topLeftCorner topLeftCorner-53"
                        height="2"
                        width="2"
                      >
                        <path
                          d="M0 2 A 2 2, 0, 0, 1, 2 0 L 0 0 Z"
                        />
                      </svg>
                      <svg
                        className="ms-ShimmerLine-topRightCorner topRightCorner-54"
                        height="2"
                        width="2"
                      >
                        <path
                          d="M0 0 A 2 2, 0, 0, 1, 2 2 L 2 0 Z"
                        />
                      </svg>
                      <svg
                        className="ms-ShimmerLine-bottomRightCorner bottomRightCorner-55"
                        height="2"
                        width="2"
                      >
                        <path
                          d="M2 0 A 2 2, 0, 0, 1, 0 2 L 2 2 Z"
                        />
                      </svg>
                      <svg
                        className="ms-ShimmerLine-bottomLeftCorner bottomLeftCorner-56"
                        height="2"
                        width="2"
                      >
                        <path
                          d="M2 2 A 2 2, 0, 0, 1, 0 0 L 0 2 Z"
                        />
                      </svg>
                    </div>
                  </ShimmerLineBase>
                </StyledShimmerLineBase>
              </div>
            </ShimmerElementsGroupBase>
          </StyledShimmerElementsGroupBase>
        </div>
      </div>
    </ShimmerBase>
  </StyledShimmerBase>
</DeviceInterfaces>
`;

exports[`components/devices/deviceInterfaces show interface information when status is failed 1`] = `
<Context.Provider
  value={
    Object {
      "t": [MockFunction],
    }
  }
>
  <DeviceInterfaces
    history={
      Object {
        "location": Object {
          "pathname": undefined,
          "search": undefined,
        },
      }
    }
    isLoading={false}
    location={
      Object {
        "pathname": undefined,
        "search": undefined,
      }
    }
    match={
      Object {
        "params": Object {},
      }
    }
    modelDefinitionWithSource={
      Object {
        "modelDefinition": Object {
          "@context": "http://azureiot.com/v1/contexts/Interface.json",
          "@id": "urn:azureiot:ModelDiscovery:DigitalTwin:1",
          "@type": "Interface",
          "contents": Array [
            Object {
              "@type": "Property",
              "description": "Providing model and optional interfaces information on a digital twin.",
              "displayName": "Model Information",
              "name": "modelInformation",
              "schema": Object {
                "@type": "Object",
                "fields": Array [
                  Object {
                    "name": "modelId",
                    "schema": "string",
                  },
                  Object {
                    "name": "interfaces",
                    "schema": Object {
                      "@type": "Map",
                      "mapKey": Object {
                        "name": "name",
                        "schema": "string",
                      },
                      "mapValue": Object {
                        "name": "schema",
                        "schema": "string",
                      },
                    },
                  },
                ],
              },
            },
          ],
          "displayName": "Digital Twin",
        },
        "modelDefinitionSynchronizationStatus": 5,
      }
    }
    refresh={[MockFunction]}
    setInterfaceId={
      [MockFunction] {
        "calls": Array [
          Array [
            null,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    settingsVisibleToggle={[MockFunction]}
  />
</Context.Provider>
`;

exports[`components/devices/deviceInterfaces show interface information when status is fetched 1`] = `
<Context.Provider
  value={
    Object {
      "t": [MockFunction],
    }
  }
>
  <DeviceInterfaces
    history={
      Object {
        "location": Object {
          "pathname": undefined,
          "search": undefined,
        },
      }
    }
    isLoading={false}
    location={
      Object {
        "pathname": undefined,
        "search": undefined,
      }
    }
    match={
      Object {
        "params": Object {},
      }
    }
    modelDefinitionWithSource={
      Object {
        "modelDefinitionSynchronizationStatus": 5,
      }
    }
    refresh={[MockFunction]}
    setInterfaceId={
      [MockFunction] {
        "calls": Array [
          Array [
            null,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    settingsVisibleToggle={[MockFunction]}
  />
</Context.Provider>
`;
